# fastapi-telemon

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MIGRATION_CHECKLIST.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TMPLATE.md
.github/ISSUE_TEMPLATE/: bug_rerport.md
docs/: CONTRIBUTING.md  SECURITY.md  security-guide.md
examples/: basic_setup.py  with_database.py  with_redis.py
monitoring/: config.py  middleware.py  telegram.py
tests/: __init__.py  conftest.py
