[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-telemon"
version = "1.0.0"
description = "Production-ready monitoring solution for FastAPI with Telegram alerts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "HumanGPTs", email = "verxotyroff.tutu@gmail.com"}
]
maintainers = [
    {name = "HumanGPTs", email = "verxotyroff.tutu@gmail.com"}
]
keywords = [
    "fastapi",
    "monitoring",
    "telegram",
    "alerts",
    "error-tracking",
    "health-check",
    "performance",
    "async",
    "middleware"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "black>=25.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
redis = [
    "redis>=5.0.0",
]
arq = [
    "arq>=0.26.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
all = [
    "redis>=5.0.0",
    "arq>=0.26.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/humangpts/fastapi-telemon"
Documentation = "https://github.com/humangpts/fastapi-telemon/tree/main/docs"
Repository = "https://github.com/humangpts/fastapi-telemon"
"Bug Reports" = "https://github.com/humangpts/fastapi-telemon/issues"
Changelog = "https://github.com/humangpts/fastapi-telemon/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["monitoring"]

[tool.setuptools.package-data]
monitoring = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "arq.*",
    "sqlalchemy.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=monitoring --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["monitoring"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]